2004-06-01  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c: fixed bug 139268

2004-05-28  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-css.c: fixed typos in css colour definitions

2004-05-15  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: fixed a bug causing defaults to be messed up when a radial gradient is based on a linear gradient and vice versa
	
2004-05-14  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Support automake 1.8
	* */Makefile.am: Add VFS libs
	
2004-05-09  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Don't pollute the global namespace
	* rsvg-text.h: Ditto
	* rsvg.c: Ditto
	
2004-04-30  Dom Lachowicz <cinamod@hotmail.com>

	* librsvg-2.0.pc.in: Remove bogus dependencies
	
2004-04-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in
	* rsvg-shapes.c: Enable loading remote images
	
2004-04-18  Dodji Seketeli  <dodji@gnome.org>

	* configure.in: use libcroco 0.6.0
	* rsvg-styles.c: 
	(ccss_property): libcroco use CRString now, no GString.

2004-04-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c, rsvg-filter.c: Support data: images in filters
	
2004-04-12  Ross Burton  <ross@burtonini.com>

	* rsvg-shapes.c: Use the correct rowstride when scaling images.

2004-03-30  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-paint-server.c: made currentColor work for gradients
	
2004-03-27  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin.c: Support a few additional "mime types" for SVG.
	Apparently, Adobe returns image/svg-xml...
	
2004-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: bug 138084
	
2004-03-23  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: Use the current SVG as our application icon
	instead of that W3C logo
	
2004-03-23  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-paint-server.c: fixed linear gradient transformations
	
2004-03-22  Christian Schaller <Uraeus@gnome.org>

	* Use original SVG by Chris Lilley as rsvg-viwer logo
